--- a/index.html
+++ b/index.html
@@ -168,63 +168,66 @@
     </main>
 
     <section id="contacto" class="contacto contenedor ">
-    <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15865.385736460263!2d-75.58587725!3d6.21796405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1698784984233!5m2!1ses-419!2sco" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-
-    <div class="contacto-texto">
-        <h2>¡Escribenos!</h2>
-        <div class="iconos">
-            <img src="img/ubicacion.png"> 
-            <p>Carrera23sur4515</p> 
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15865.385736460263!2d-75.58587725!3d6.21796405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1698784984233!5m2!1ses-419!2sco" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div class="iconos">
-            <img src="/img/telefono.png"> 
-            <p>+57 333 2419266</p> 
-        </div>
+        <div class="contacto-texto">
+            <h2>¡Escribenos!</h2>
+            <div class="iconos">
+                <img src="img/ubicacion.png"> 
+                <p>Carrera23sur4515</p> 
+            </div>
 
-        <div class="iconos">
-            <img src="/img/correo.png"> 
-            <p>correo@gmail.com</p> 
+            <div class="iconos">
+                <img src="/img/telefono.png"> 
+                <p>+57 333 2419266</p> 
+            </div>
+
+            <div class="iconos">
+                <img src="/img/correo.png"> 
+                <p>correo@gmail.com</p> 
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+
     <div class="wha">
     <i class="fa-brands fa-whatsapp"></i>
     </div>
 
-<footer class="footer">
-    <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
+    <footer class="footer">
+        <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
 
-    <div>
-        <h3>Acerca de Patitas Puppy</h3>
-        <p>Nuestra historia</p>
-        <p>Quienes Somos</p>
-        <p>Trabaja con nosotros</p>
-    </div>
-
-    <div>
-        <h3>Información</h3>
-        <p>Telefono</p>
-        <p>Correo</p>
-        <p>Colombia,Medellín</p>
-    </div>
-    <div>
-        <h3>Links de Interés</h3>
-        <p>Cuidos</p>
-        <p>Cuidado Animal</p>
-    </div>
-    <div>
-        <h3>Siguenos en Nuestras Redes</h3>
-        <div class="redes-sociales">
-        <img
-            class="insta"
-            src="./img/Instagram.png"
-            alt="Logo de Instagram"/>
-        <img class="what" src="./img/whatsapp.png" alt="Logo de Whatsapp" />
+        <div>
+            <h3>Acerca de Patitas Puppy</h3>
+            <a href="#"><p>Nuestra historia</p></a>
+            <a href="#"><p>Quienes Somos</p></a>
+            <a href="#"><p>Trabaja con nosotros</p></a>
         </div>
-    </div>
+
+        <div>
+            <h3>Información</h3>
+            <a href="#"><p>Telefono</p></a>
+            <a href="#"><p>Correo</p></a>
+            <a href="#"><p>Colombia,Medellín</p></a>
+            
+        </div>
+        <div>
+            <h3>Links de Interés</h3>
+            <a href="#"><p>Cuidos</p></a>
+            <a href="#"><p>Cuidado Animal</p></a>
+            
+        </div>
+        <div>
+            <h3>Siguenos en Nuestras Redes</h3>
+            <div class="redes-sociales">
+            <img
+                class="insta"
+                src="./img/Instagram.png"
+                alt="Logo de Instagram"/>
+            <img class="what" src="./img/whatsapp.png" alt="Logo de Whatsapp" />
+            </div>
+        </div>
     </footer>    
 </body>
 </html>
