--- a/index.html
+++ b/index.html
@@ -175,17 +175,17 @@
         <div class="contacto-texto">
             <h2>¡Escribenos!</h2>
             <div class="iconos">
-                <img src="img/ubicacion.png"> 
+                <img src="./img/ubicacion.png"> 
                 <p>Carrera23sur4515</p> 
             </div>
 
             <div class="iconos">
-                <img src="/img/telefono.png"> 
+                <img src="./img/telefono.png"> 
                 <p>+57 333 2419266</p> 
             </div>
 
             <div class="iconos">
-                <img src="/img/correo.png"> 
+                <img src="./img/correo.png"> 
                 <p>correo@gmail.com</p> 
             </div>
         </div>
