Nuevo contenido de imagenes, texto, logo, hover whatsapp

--- a/Jugueteria.html
+++ b/Jugueteria.html
@@ -1,173 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patitas Puppy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="shortcut icon" href="img/logo-patitas02.png" />
+    <link rel="shortcut icon" href="./img/Logo amarillo.png">
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Roboto+Condensed:wght@100;400;600&family=Roboto:wght@300;400;500;900&display=swap"
-      rel="stylesheet"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Roboto+Condensed:wght@100;400;600&family=Roboto:wght@300;400;500;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/sytles.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="barraNava">
-          <li><a href="#categorias">Categoria</a></li>
-          <li><a href="#productos">Productos</a></li>
-          <li>
-            <a class="img-logo" href="index.html"
-              ><img src="./img/logo-patitas02.png" alt="logo-patitas"
-            /></a>
-          </li>
-          <li><a href="nosotros.html">Sobre Nosotros</a></li>
-          <li><a href="#contacto">Contactenos</a></li>
-        </ul>
-      </nav>
+</head>
 
-      <div class="banner">
-        <img src="img/Banner 2.jpg" alt="banner" />
-      </div>
+<body>
+    <header>
+        <nav>
+            <ul class="barraNava">
+                <li><a href="#categorias">Categoria</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li>
+                    <a class="img-logo" href="index.html">
+                        <img src="./img/logoBlanco.png" alt="logo-patitas" />
+                    </a>
+                </li>
+                <li><a href="nosotros.html">Sobre Nosotros</a></li>
+                <li><a href="#contacto">Contactenos</a></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <img src="./img/Banner ca.png" alt="banner" />
+        </div>
     </header>
 
-      <section id="categorias" class="categorias contenedor">
+    <section id="categorias" class="categorias contenedor">
         <h3>Categorias</h3>
-            <div class="categorias-imagenes">
-                <a href="Alimento.html"><img src="./img/Alimento01.png" alt=""></a>
-                <a href="Complementos.html"><img src="./img/complementos04.png" alt=""></a>
-                <a href="Jugueteria.html"><img src="./img/juguetes03.png" alt=""></a>
-                <a href="Belleza_e_Higiene.html"><img src="./img/bellezaHigiene02.png" alt=""></a>
-            </div>
-      </section>
+        <div class="categorias-imagenes">
+            <a href="Alimento.html"><img src="./img/Alimento01.png" alt=""></a>
+            <a href="Complementos.html"><img src="./img/complementos04.png" alt=""></a>
+            <a href="Jugueteria.html"><img src="./img/juguetes03.png" alt=""></a>
+            <a href="Belleza_e_Higiene.html"><img src="./img/bellezaHigiene02.png" alt=""></a>
+        </div>
+    </section>
 
 
     <div class="letra-categorias">
-      <h1>Juguetería</h1>
+        <h1>Juguetería</h1>
     </div>
 
     <section class="cards contenedor">
-      <div class="card">
-        <img src="img/juguetes01.avif" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+        <div class="card">
+            <img src="./img/laser.jpg" alt="" />
 
-      <div class="card">
-        <img src="img/juguetes02.avif" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+            <h4>Láser para Gato</h4>
+            <p>El láser para gato es un juguete interactivo que proyecta un punto de luz móvil, estimulando el instinto de caza de tu felino y proporcionando horas de diversión y ejercicio.</p>
+            <p>Precio <span>$20.000</span></p>
+        </div>
 
-      <div class="card">
-        <img src="img/juguetes03.avif" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+        <div class="card">
+            <img src="./img/pez.jpg" alt="" />
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+            <h4>Pez</h4>
+            <p>El peluche en forma de pez para gato es un adorable juguete diseñado para satisfacer el instinto de caza de tu felino. Con su forma realista, proporciona horas de entretenimiento y confort para tu gato.</p>
+            <p>Precio <span>$25.000</span></p>
+        </div>
 
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
-      <div class="card">
-        <img src="img/cuido01.jpeg" alt="" />
-        <p class="descripcion">Una descripcion</p>
-        <h4>Besties</h4>
-        <p>Descripcion del producto</p>
-        <p>Precio <span>$10</span></p>
-      </div>
+        <div class="card">
+            <img src="./img/sonajero.jpg" alt="" />
+
+            <h4>Pelotas con Sonajero</h4>
+            <p>Las pelotas para gato son juguetes compactos y coloridos que brindan diversión y ejercicio a tu felino. Ideales para el juego interactivo, estas pelotas son ligeras, proporcionando horas de entretenimiento para tu mascota.</p>
+            <p>Precio <span>$15.000</span></p>
+        </div>
+
+        <div class="card">
+            <img src="./img/pelota01.png" alt="" />
+
+            <h4>Pelota</h4>
+            <p>Pelota para perro es un juguete resistente y duradero diseñados para satisfacer la necesidad de masticar y jugar de tu mascota. Perfecta para lanzar y recuperar, estas pelota ofrecen diversión y ejercicio para perros de todos los tamaños.</p>
+            <p>Precio <span>$22.000</span></p>
+        </div>
+
+        <div class="card">
+            <img src="./img/peluche.jpg" alt="" />
+
+            <h4>Peluche Oso</h4>
+            <p>El peluche para perro es un juguete suave y reconfortante que brindan a tu mascota una compañía amorosa. Con textura agradables y diseños variados</p>
+            <p>Precio <span>$30.000</span></p>
+        </div>
+        <div class="card">
+            <img src="./img/raton.png" alt="" />
+
+            <h4>Raton a Control Remoto</h4>
+            <p>El ratón para gatos es un juguete pequeño y estimulante que imita la presa de un felino. Con su textura atractiva, este juguete fomenta el juego y la caza de tu gato, manteniéndolo activo y entretenido.</p>
+            <p>Precio <span>$40.000</span></p>
+        </div>
     </section>
 
 
 
     <section class="contacto contenedor">
-      <div>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15865.385736460263!2d-75.58587725!3d6.21796405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1698784984233!5m2!1ses-419!2sco"
-          width="350"
-          height="300"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </div>
-
-      <div class="contacto-texto">
-        <h2>¡Escribenos!</h2>
-        <div class="iconos">
-          <img src="img/ubicacion.png" />
-          <p>Carrera 23 Sur #45-15</p>
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15865.385736460263!2d-75.58587725!3d6.21796405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sco!4v1698784984233!5m2!1ses-419!2sco"
+                width="350" height="300" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <div class="iconos">
-          <img src="/img/telefono.png" />
-          <p>+57 333-241-92-66</p>
-        </div>
+        <div class="contacto-texto">
+            <h2>¡Escribenos!</h2>
 
-        <div class="iconos">
-          <img src="/img/correo.png" />
-          <p>correo@gmail.com</p>
+            <div class="iconos-content">
+                <div class="iconos">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <i class="fa-solid fa-phone-volume"></i>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+                <div class="iconos-texto">
+                    <p>Carrera23sur4515</p>
+                    <p>+57 333 2419266</p>
+                    <p>correo@gmail.com</p>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
-    <div class="wha">
-      <i class="fa-brands fa-whatsapp"></i>
+    <div class="whatsapp">
+        <a href="https://wa.me/qr/SQT4WD2CBVMGH1" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+        </a>
     </div>
 
     <footer class="footer">
-      <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
+        <img class="logopat" src="./img/LogoBlanco.png" alt="Logo" />
 
-      <div>
-        <h3>Acerca de Patitas Puppy</h3>
-        <p>Nuestra historia</p>
-        <p>Quienes Somos</p>
-        <p>Trabaja con nosotros</p>
-      </div>
-
-      <div>
-        <h3>Información</h3>
-        <p>Telefono</p>
-        <p>Correo</p>
-        <p>Colombia,Medellín</p>
-      </div>
-      <div>
-        <h3>Links de Interés</h3>
-        <p>Cuidos</p>
-        <p>Cuidado Animal</p>
-      </div>
-      <div>
-        <h3>Siguenos en Nuestras Redes</h3>
-        <div class="redes-sociales">
-          <img
-            class="insta"
-            src="./img/Instagram.png"
-            alt="Logo de Instagram"
-          />
-          <img class="what" src="./img/whatsapp.png" alt="Logo de Whatsapp" />
+        <div>
+            <h3>Acerca de Patitas Puppy</h3>
+            <a href="#">
+                <p>Nuestra historia</p>
+            </a>
+            <a href="#">
+                <p>Quienes Somos</p>
+            </a>
+            <a href="#">
+                <p>Trabaja con nosotros</p>
+            </a>
         </div>
-      </div>
+
+        <div>
+            <h3>Información</h3>
+            <a href="#">
+                <p>Telefono</p>
+            </a>
+            <a href="#">
+                <p>Correo</p>
+            </a>
+            <a href="#">
+                <p>Colombia, Medellín</p>
+            </a>
+        </div>
+
+        <div>
+            <h3>Links de Interés</h3>
+            <a href="#">
+                <p>Cuidos</p>
+            </a>
+            <a href="#">
+                <p>Cuidado Animal</p>
+            </a>
+        </div>
+
+        <div>
+            <h3>Síguenos en Nuestro Instagram</h3>
+            <div class="redes-sociales">
+                <a target="_blank" href="https://www.instagram.com/patitas_puppy">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
