--- a/nosotros.html
+++ b/nosotros.html
@@ -1,100 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patitas Puppy</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="shortcut icon" href="img/logo-patitas02.png" />
+    <link rel="shortcut icon" href="./img/Logo amarillo.png">
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Roboto+Condensed:wght@100;400;600&family=Roboto:wght@300;400;500;900&display=swap"
-      rel="stylesheet"
-    />
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&family=Roboto+Condensed:wght@100;400;600&family=Roboto:wght@300;400;500;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/sytles.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="barraNava">
-          <li><a href="index.html">Categoria</a></li>
-          <li><a href="index.html">Productos</a></li>
-          <li>
-            <a class="img-logo" href="index.html"
-              ><img src="./img/logo-patitas02.png" alt="logo-patitas"
-            /></a>
-          </li>
-          <li><a href="nosotros.html">Sobre Nosotros</a></li>
-          <li><a href="index.html">Contactenos</a></li>
-        </ul>
-      </nav>
+</head>
 
-      <div class="banner">
-        <img src="img/Banner 2.jpg" alt="banner" />
-      </div>
+<body>
+    <header>
+        <nav>
+            <ul class="barraNava">
+                <li><a href="index.html">Categoria</a></li>
+                <li><a href="index.html">Productos</a></li>
+                <li>
+                    <a class="img-logo" href="index.html">
+                        <img src="./img/logoBlanco.png" alt="logo-patitas" />
+                    </a>
+                </li>
+                <li><a href="nosotros.html">Sobre Nosotros</a></li>
+                <li><a href="index.html">Contactenos</a></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <img src="./img/Banner ca.png" alt="banner" />
+        </div>
     </header>
 
     <main>
-      <section class="contenedor-nosotros">
-        <div class="imagen-nosotros contenedor">
-          <img src="img/NosotrosDog.avif" alt="">
-        </div>
-        <div class="texto-nosotros contenedor">
-          <h1>Sobre Nosotros</h1>
-          <h3>
-            <strong>Visión</strong>:
-          </h3>
+        <section class="contenedor-nosotros">
+            <div class="imagen-nosotros contenedor">
+                <img src="./img/img-nosotros.jpg" alt="">
+            </div>
+            <div class="texto-nosotros contenedor">
+                <h1>Sobre Nosotros</h1>
+                <h3>
+                    <strong>Visión</strong>:
+                </h3>
 
-          <p>Ser el destino online predilecto de <span class="patitas"> Patitas Puppy </span> para los amantes de las mascotas, ofreciendo productos de calidad y un vínculo duradero entre las familias y sus queridos animales.</p>
+                <p>Ser el destino online predilecto de <span class="patitas"> Patitas Puppy </span> para los amantes de
+                    las mascotas, ofreciendo productos de calidad y un vínculo duradero entre las familias y sus
+                    queridos animales.</p>
 
-          <h3>
-            <strong>Misión</strong>:
-          </h3>
+                <h3>
+                    <strong>Misión</strong>:
+                </h3>
 
-          <p> Para <span class="patitas2"> Patitas Puppy </span>es facilitar la vida de los dueños de mascotas proporcionando productos premium y apoyo experto, promoviendo la adopción responsable y el bienestar animal, todo mientras fomentamos una comunidad compasiva.</p>
+                <p> Para <span class="patitas2"> Patitas Puppy </span>es facilitar la vida de los dueños de mascotas
+                    proporcionando productos premium y apoyo experto, promoviendo la adopción responsable y el bienestar
+                    animal, todo mientras fomentamos una comunidad compasiva.</p>
 
-          <h3>
-            <strong>Valores</strong>: 
-          </h3>
+                <h3>
+                    <strong>Valores</strong>:
+                </h3>
 
-          <p>En <span class="patitas3"> Patitas Puppy </span> guiamos por la transparencia, el respeto, la sostenibilidad y la pasión por los animales, creando un espacio donde cada mascota se sienta amada y cada cliente se sienta valorado.</p>
-        </div>
-      </section>
+                <p>En <span class="patitas3"> Patitas Puppy </span> guiamos por la transparencia, el respeto, la
+                    sostenibilidad y la pasión por los animales, creando un espacio donde cada mascota se sienta amada y
+                    cada cliente se sienta valorado.</p>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
-      <img class="logopat" src="./img/Logo blanco PNG.png" alt="Logo" />
+        <img class="logopat" src="./img/LogoBlanco.png" alt="Logo" />
 
-      <div>
-        <h3>Acerca de Patitas Puppy</h3>
-        <p>Nuestra historia</p>
-        <p>Quienes Somos</p>
-        <p>Trabaja con nosotros</p>
-      </div>
-
-      <div>
-        <h3>Información</h3>
-        <p>Telefono</p>
-        <p>Correo</p>
-        <p>Colombia,Medellín</p>
-      </div>
-      <div>
-        <h3>Links de Interés</h3>
-        <p>Cuidos</p>
-        <p>Cuidado Animal</p>
-      </div>
-      <div>
-        <h3>Siguenos en Nuestras Redes</h3>
-        <div class="redes-sociales">
-          <img
-            class="insta"
-            src="./img/Instagram.png"
-            alt="Logo de Instagram"
-          />
-          <img class="what" src="./img/whatsapp.png" alt="Logo de Whatsapp" />
+        <div>
+            <h3>Acerca de Patitas Puppy</h3>
+            <a href="#">
+                <p>Nuestra historia</p>
+            </a>
+            <a href="#">
+                <p>Quienes Somos</p>
+            </a>
+            <a href="#">
+                <p>Trabaja con nosotros</p>
+            </a>
         </div>
-      </div>
+
+        <div>
+            <h3>Información</h3>
+            <a href="#">
+                <p>Telefono</p>
+            </a>
+            <a href="#">
+                <p>Correo</p>
+            </a>
+            <a href="#">
+                <p>Colombia, Medellín</p>
+            </a>
+        </div>
+
+        <div>
+            <h3>Links de Interés</h3>
+            <a href="#">
+                <p>Cuidos</p>
+            </a>
+            <a href="#">
+                <p>Cuidado Animal</p>
+            </a>
+        </div>
+
+        <div>
+            <h3>Síguenos en Nuestro Instagram</h3>
+            <div class="redes-sociales">
+                <a target="_blank" href="https://www.instagram.com/patitas_puppy">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
