--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <img class="logopat" src="./img/LogoBlanco.png" alt="Logo" />
 
         <div>
-            <h3>Acerca de Patitas Puppy</h3>
+            <h3>Sobre Patitas Puppy</h3>
             <a href="#">
                 <p>Nuestra historia</p>
             </a>
